--- a/sns/server/package.json
+++ b/sns/server/package.json
@@ -2,23 +2,28 @@
 	"name": "social_media_project",
 	"version": "1.0.0",
 	"description": "twitter clone coding",
-	"main": "app.js",
-	"type": "module",
+	"main": "app.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon app"
+		"start": "npm run build:live",
+		"build": "tsc -p .",
+		"build:live": "nodemon --watch '*.ts' --exec \"ts-node\" app.ts"
 	},
 	"author": "Hyesu Hong",
 	"license": "ISC",
 	"dependencies": {
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.14",
+		"@types/morgan": "^1.9.3",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"helmet": "^6.0.0",
 		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
+		"@types/node": "^18.11.10",
 		"nodemon": "^2.0.20",
-		"ts-node": "^10.9.1"
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.3"
 	}
 }
