--- a/sns/server/package.json
+++ b/sns/server/package.json
@@ -14,9 +14,11 @@
 	"dependencies": {
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.14",
+		"@types/express-validator": "^3.0.0",
 		"@types/morgan": "^1.9.3",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
+		"express-validator": "^6.14.2",
 		"helmet": "^6.0.0",
 		"morgan": "^1.10.0"
 	},
