--- a/sns/server/package.json
+++ b/sns/server/package.json
@@ -12,14 +12,18 @@
 	"author": "Hyesu Hong",
 	"license": "ISC",
 	"dependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.14",
 		"@types/express-validator": "^3.0.0",
+		"@types/jsonwebtoken": "^8.5.9",
 		"@types/morgan": "^1.9.3",
+		"bcrypt": "^5.1.0",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"express-validator": "^6.14.2",
 		"helmet": "^6.0.0",
+		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
