--- a/sns/server/package.json
+++ b/sns/server/package.json
@@ -25,7 +25,8 @@
 		"express-validator": "^6.14.2",
 		"helmet": "^6.0.0",
 		"jsonwebtoken": "^8.5.1",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"socket.io": "^4.5.4"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.10",
